# ich-habe-fertig

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  migrate.cpp
src/model/: TodoItem.cpp  TodoItem.h  TodoStore.cpp  TodoStore.h
src/ui/: AddItemDialog.cpp  AddItemDialog.h  CelebrationOverlay.cpp  CelebrationOverlay.h  ImagePaster.cpp  ImagePaster.h  MainWindow.cpp  MainWindow.h  NotesEditor.cpp  NotesEditor.h  ThumbnailListWidget.cpp  ThumbnailListWidget.h
tests/: CMakeLists.txt  test_todo_store.cpp
